added project section

--- a/index.html
+++ b/index.html
@@ -27,28 +27,137 @@
 			</div> 
 			<img src="img/header-section/chairs.png" alt="chairs" class="chairs-img">
 			<div class="menu">
-				<object data="img/header-section/menu/menu.svg" type="image/svg+xml" class="menu__square">
-				</object>
-<!-- 				<ul>
-					<li>Home</li>
-					<li>Projects</li>
-					<li>Studio</li>
-					<li>News</li>
-					<li>Contact</li>
-				</ul> -->
-				<div class="menu__adress">
+				<nav class="nav-menu">
+					<div><a href="#" class="nav-menu__item-1">Contact</a></div>
+					<div><a href="#" class="nav-menu__item-2">News</a></div>
+					<div><a href="#" class="nav-menu__item-3">Studio</a></div>
+					<div><a href="#" class="nav-menu__item-4">Projects</a></div>
+					<div><a href="#" class="nav-menu__item-5">Home</a></div>
+					<object data="img/header-section/menu/menu.svg" type="image/svg+xml" class="nav-menu__item-base">
+					</object>
+				</nav>
+				<div class="menu__left-item">
 					90802 California
 					Long Beatch
 					PO BOX 68789
 					300 EAST OCEAN
 					BOULEVARD
 				</div>
-				<div class="menu__contacts">
+				<div class="menu__right-item">
 					+64 9 345 6758
 					info@dsgn-studio.com
 				</div>
 			</div>
 		</div>
 	</header>
+
+<!-- ######## projects section -->
+
+	<section class="projects-section">
+		<div class="card project-card">
+			<div class="card-list project-card__list">
+				<a href="#" class="card-list__item-link"><span class="card-list__item-link-first">All</span></a>
+				<a href="#" class="card-list__item-link">House</a>
+				<a href="#" class="card-list__item-link">Commercial</a>
+				<a href="#" class="card-list__item-link">Personal</a>
+				<a href="#" class="card-list__item-link">Studio lab</a>
+			</div>
+			<div class="project-card__title">Projects</div>
+		</div>
+		<div class="card fondue-card">
+			<h3 class="card__title fondue-card__title">Fondue</h3>
+			<ul class="card-list fondue-card__item-wrapper">
+				<li class="card-list__item"><span class="card-list__item-bold">Project Assistant:</span> Francesco Dompieri</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Material:</span>  Glass and Metal</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span> Suspension lamp</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> David Design</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2014</li>
+			</ul>
+			<a href="#" class="card__button fondue-card__button">View project</a>
+		</div>
+		<div class="card potter-card">
+			<h3 class="card__title potter-card__title">Potter</h3>
+			<p class="card__text potter-card__text"><span class="card-list__item-bold">For</span>stelton
+				Potter focuses on the function
+				ality and process of preparing tea.
+				 a big sieve allows the flavor of 
+				to evenly brewed. </p>
+			<a href="#" class="card__button potter-card__button">View project</a>
+		</div>
+		<div class="card tabano-card">
+			<h3 class="card__title tabano-card__title">Tabano</h3>
+			<ul class="card-list tabano-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> PATRICIA URQUIOLA</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span> armchairs</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> B&B ITALIA</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2014</li>
+			</ul>
+			<a href="#" class="card__button tabano-card__button">View project</a>
+			<!-- <div class="card__liked">+200</div>	 -->
+		</div>
+		<div class="card louis-card">
+			<h3 class="card__title louis-card__title">Louis xx</h3>
+			<ul class="card-list louis-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> Philippe Starck</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span>  chairs</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> vitra</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2012</li>
+			</ul>
+			<a href="#" class="card__button louis-card__button">View project</a>
+			<!-- <div class="card__liked">+200</div> -->
+		</div>
+		<div class="card un-card">
+			<h3 class="card__title un-card__title">395-396 p22</h3>
+			<ul class="card-list un-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> Patrick Norguet</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span> armchairs</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> cassina</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2013</li>
+			</ul>
+			<a href="#" class="card__button un-card__button">View project</a>
+			<!-- <div>+200</div>			 -->
+		</div>
+		<div class="card fiji-card">
+			<h3 class="card__title fiji-card__title">fiji</h3>
+			<ul class="card-list fiji-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> Cuno Frommherz</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span> armchairs</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2012</li>
+			</ul>
+			<a href="#" class="card__button fiji-card__button">View project</a>
+			<!-- <div>+200</div>	 -->
+		</div>
+		<div class="card sesann-card">
+			<h3 class="card__title sesann-card__title">Sesann</h3>
+			<ul class="card-list sesann-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> Gianfranco Frattin</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Typology:</span> armchairs</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> cassina</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 1970</li>
+			</ul>
+			<a href="#" class="card__button sesann-card__button">View project</a>
+			<!-- <div>+200</div>	 -->
+		</div>
+		<div class="card alessi-card">
+			<h3 class="card__title alessi-card__title">Alessi</h3>
+			<ul class="card-list alessi-card__list">
+				<li class="card-list__item"><span class="card-list__item-bold">Designer</span> Piero Lissoni</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Client:</span> Alessi</li>
+				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2013</li>
+			</ul>
+			<a href="#" class="card__button alessi-card__button">View project</a>
+			<!-- <div>+200</div>	 -->
+		</div>
+		<div class="card timeline-card">
+			<div class="card-list timeline-card__list">
+				<a href="#" class="card-list__item-link"><span class="card-list__item-link-first">Timeline</span></a>
+				<a href="#" class="card-list__item-link">2014</a>
+				<a href="#" class="card-list__item-link">2013</a>
+				<a href="#" class="card-list__item-link">2012</a>
+				<a href="#" class="card-list__item-link">2011</a>
+				<a href="#" class="card-list__item-link">2010</a>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
