added media queries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Description" content="My first layout based on CSS Grid and SCSS">
 	<title>DSGN</title>
 	<link rel="stylesheet" href="libs/normalize/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -28,11 +29,11 @@
 			<img src="img/header-section/chairs.png" alt="chairs" class="chairs-img">
 			<div class="menu">
 				<nav class="nav-menu">
-					<div><a href="#" class="nav-menu__item-1">Contact</a></div>
-					<div><a href="#" class="nav-menu__item-2">News</a></div>
-					<div><a href="#" class="nav-menu__item-3">Studio</a></div>
-					<div><a href="#" class="nav-menu__item-4">Projects</a></div>
-					<div><a href="#" class="nav-menu__item-5">Home</a></div>
+					<a href="#" class="nav-menu__item-1">Contact</a>
+					<a href="#" class="nav-menu__item-2">News</a>
+					<a href="#" class="nav-menu__item-3">Studio</a>
+					<a href="#" class="nav-menu__item-4">Projects</a>
+					<a href="#" class="nav-menu__item-5">Home</a>
 					<object data="img/header-section/menu/menu.svg" type="image/svg+xml" class="nav-menu__item-base">
 					</object>
 				</nav>
