added projects section

--- a/index.html
+++ b/index.html
@@ -160,5 +160,87 @@
 			</div>
 		</div>
 	</section>
+	<section class="studio-section">
+		<div class="card studio-card">
+			<h3 class="card__title studio-card__title">Studio</h3>
+		</div>
+		<article class="article-card">
+			<div class="article-card__cite-bold">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
+
+				<p>Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</p>
+			</div>
+			<div class="article-card__cite">
+				<p>Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat. </p>
+				<p>Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi. </p>
+				<p>Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
+			</div>
+		</article>
+		<div class="awards-card">
+			<img src="img/studio-section/studio.jpg" alt="studio photo" class="awards-card__image">
+			<h3 class="awards-card__title">Awards</h3>
+			<div class="awards-card__list-wrap">
+				<ul class="awards-card__list">
+					<li>Aenean ullamcorper porta</li>
+					<li>nisl,</li>
+					<li>ac lobortis elit </li>
+					<li>commodo placerat. </li>
+					<li>Vivamus </li>
+				</ul>
+				<ul class="awards-card__list">
+					<li>Aenean ullamcorper porta</li>
+					<li>nisl,</li>
+					<li>ac lobortis elit </li>
+					<li>commodo placerat. </li>
+					<li>Vivamus </li>
+				</ul>
+			</div>
+			
+		</div>
+		<div class="staff-card">
+			<div class="staff-card__title">Staff.</div>
+			<article class="staff-card__article">
+				<p>Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus. </p>
+				<p>Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus ut. </p>
+				<p>Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
+			</article>
+		</div>
+		<div class="personal-card starck-card">
+			<img src="img/studio-section/starck.jpg" alt="phillipe starck" class="personal-card__image">
+			<h3 class="personal-card__name">Philippe Starck</h3>
+			<p class="personal-card__position">Designer</p>
+			<div class="personal-card__socials">
+				<div class="socials__cv">cv</div>
+				<a href="#" class="socials-ico facebook"></a>
+				<a href="#" class="socials-ico twitter"></a>
+				<a href="#" class="socials-ico linkedin"></a>
+				<a href="#" class="socials-ico google-pl"></a>
+			</div>
+		</div>
+		<div class="personal-card bellini-card">
+			<img src="img/studio-section/bellini.jpg" alt="mario bellini" class="personal-card__image">
+			<h3 class="personal-card__name">Mario Bellini</h3>
+			<p class="personal-card__position">Designer</p>
+			<div class="personal-card__socials">
+				<div class="socials__cv">cv</div>
+				<a href="#" class="socials-ico facebook"></a>
+				<a href="#" class="socials-ico twitter"></a>
+				<a href="#" class="socials-ico linkedin"></a>
+				<a href="#" class="socials-ico google-pl"></a>
+			</div>
+		</div>
+		<div class="personal-card patricia-card">
+			<img src="img/studio-section/patricia.jpg" alt="patricia urquiola" class="personal-card__image">
+			<h3 class="personal-card__name">Patricia Urquiola</h3>
+			<p class="personal-card__position">Designer</p>
+			<div class="personal-card__socials">
+				<div class="socials__cv">cv</div>
+				<a href="#" class="socials-ico facebook"></a>
+				<a href="#" class="socials-ico twitter"></a>
+				<a href="#" class="socials-ico linkedin"></a>
+				<a href="#" class="socials-ico google-pl"></a>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
