added area attributes for the links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 					design
 				</h3>
 				<div class="icons-wrapper">
-					<a href="#" class="logo__icon logo__icon-facebook"></a>
-					<a href="#" class="logo__icon logo__icon-twitter"></a>
-					<a href="#" class="logo__icon logo__icon-linkedin"></a>
-					<a href="#" class="logo__icon logo__icon-gplus"></a>
+					<a href="#" class="logo__icon logo__icon-facebook" aria-label="Facebook"></a>
+					<a href="#" class="logo__icon logo__icon-twitter" aria-label="Twitter"></a>
+					<a href="#" class="logo__icon logo__icon-linkedin" aria-label="Linkedin"></a>
+					<a href="#" class="logo__icon logo__icon-gplus" aria-label="Google plus"></a>
 				</div>
 			</div> 
 			<img src="img/header-section/chairs.png" alt="chairs" class="chairs-img">
@@ -211,10 +211,10 @@
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
 				<div class="socials__cv">cv</div>
-				<a href="#" class="socials-ico facebook"></a>
-				<a href="#" class="socials-ico twitter"></a>
-				<a href="#" class="socials-ico linkedin"></a>
-				<a href="#" class="socials-ico google-pl"></a>
+				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
+				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
+				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
+				<a href="#" class="socials-ico google-pl" aria-label="Google plus"></a>
 			</div>
 		</div>
 		<div class="personal-card bellini-card">
@@ -223,10 +223,10 @@
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
 				<div class="socials__cv">cv</div>
-				<a href="#" class="socials-ico facebook"></a>
-				<a href="#" class="socials-ico twitter"></a>
-				<a href="#" class="socials-ico linkedin"></a>
-				<a href="#" class="socials-ico google-pl"></a>
+				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
+				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
+				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
+				<a href="#" class="socials-ico google-pl" aria-label="Google plus"></a>
 			</div>
 		</div>
 		<div class="personal-card patricia-card">
@@ -235,10 +235,10 @@
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
 				<div class="socials__cv">cv</div>
-				<a href="#" class="socials-ico facebook"></a>
-				<a href="#" class="socials-ico twitter"></a>
-				<a href="#" class="socials-ico linkedin"></a>
-				<a href="#" class="socials-ico google-pl"></a>
+				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
+				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
+				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
+				<a href="#" class="socials-ico google-pl" aria-label="Google plus"></a>
 			</div>
 		</div>
 	</section>
