fix alt text for object/svg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 					<a href="#" class="nav-menu__item-3">Studio</a>
 					<a href="#" class="nav-menu__item-4">Projects</a>
 					<a href="#" class="nav-menu__item-5">Home</a>
-					<object data="img/header-section/menu/menu.svg" type="image/svg+xml" class="nav-menu__item-base" alt="menu">
+					<object data="img/header-section/menu/menu.svg" type="image/svg+xml" class="nav-menu__item-base">
+						Menu
 					</object>
 				</nav>
 				<div class="menu__left-item">
