--- a/index.html
+++ b/index.html
@@ -243,5 +243,25 @@
 			</div>
 		</div>
 	</section>
+	<section class="news-section">
+		<div class="card news-card">
+			<h3 class="card__title news-card__title">News</h3>
+		</div>
+		<div class="news-block first-news">
+			<h3 class="news-block__title">Mauris et dui sed justo placerat tristique.</h3>
+			<span class="news-block__date">11.07.2014</span>
+			<img src="img/news-section/news-1.jpg" alt="lamps" class="news-block__image">
+			<p class="news-block__text">Maecenas imperdiet nisi lorem, sed fermentum tortor pretium eget. Sed mollis lacus quis nunc cursus cursus. Quisque et magna sit amet sapien fermentum scelerisque eu id massa. Mauris ornare massa vel mauris tempus, vitae tempus urna tincidunt. </p>
+			<a href="#" class="news-block__link">Read more</a>
+		</div>
+		<div class="news-block last-news">
+			<h3 class="news-block__title">Proin vehicula nibh massa </h3>
+			<span class="news-block__date">11.06.2014</span>
+			<img src="img/news-section/news-2.jpg" alt="chair" class="news-block__image">
+			<p class="news-block__text">Praesent non mauris nec orci scelerisque faucibus. Nulla ac varius est. Aenean auctor nisl elit, nec sollicitudin lectus iaculis sed. Maecenas aliquam ligula vitae pharetra scelerisque. 
+ </p>
+			<a href="#" class="news-block__link">Read more</a>
+		</div>
+	</section>
 </body>
 </html>
