--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2014</li>
 			</ul>
 			<a href="#" class="card__button fondue-card__button">View project</a>
+			<div class="card__liked fondue-card__like">+ 200</div>	
 		</div>
 		<div class="card potter-card">
 			<h3 class="card__title potter-card__title">Potter</h3>
@@ -85,6 +86,7 @@
 				 a big sieve allows the flavor of 
 				to evenly brewed. </p>
 			<a href="#" class="card__button potter-card__button">View project</a>
+			<div class="card__liked potter-card__like">+ 200</div>	
 		</div>
 		<div class="card tabano-card">
 			<h3 class="card__title tabano-card__title">Tabano</h3>
@@ -95,7 +97,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2014</li>
 			</ul>
 			<a href="#" class="card__button tabano-card__button">View project</a>
-			<!-- <div class="card__liked">+200</div>	 -->
+			<div class="card__liked tabano-card__like">+ 200</div>	
 		</div>
 		<div class="card louis-card">
 			<h3 class="card__title louis-card__title">Louis xx</h3>
@@ -106,7 +108,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2012</li>
 			</ul>
 			<a href="#" class="card__button louis-card__button">View project</a>
-			<!-- <div class="card__liked">+200</div> -->
+			<div class=" louis-card__like">+ 200</div>
 		</div>
 		<div class="card un-card">
 			<h3 class="card__title un-card__title">395-396 p22</h3>
@@ -117,7 +119,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2013</li>
 			</ul>
 			<a href="#" class="card__button un-card__button">View project</a>
-			<!-- <div>+200</div>			 -->
+			<div class="card__liked un-card__like">+ 200</div>
 		</div>
 		<div class="card fiji-card">
 			<h3 class="card__title fiji-card__title">fiji</h3>
@@ -127,7 +129,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2012</li>
 			</ul>
 			<a href="#" class="card__button fiji-card__button">View project</a>
-			<!-- <div>+200</div>	 -->
+			<div class="card__liked fiji-card__like">+ 200</div>
 		</div>
 		<div class="card sesann-card">
 			<h3 class="card__title sesann-card__title">Sesann</h3>
@@ -138,7 +140,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 1970</li>
 			</ul>
 			<a href="#" class="card__button sesann-card__button">View project</a>
-			<!-- <div>+200</div>	 -->
+			<div class="card__liked sesann-card__like">+ 200</div>
 		</div>
 		<div class="card alessi-card">
 			<h3 class="card__title alessi-card__title">Alessi</h3>
@@ -148,7 +150,7 @@
 				<li class="card-list__item"><span class="card-list__item-bold">Year:</span> 2013</li>
 			</ul>
 			<a href="#" class="card__button alessi-card__button">View project</a>
-			<!-- <div>+200</div>	 -->
+			<div class="card__liked alessi-card__like">+ 200</div>
 		</div>
 		<div class="card timeline-card">
 			<div class="card-list timeline-card__list">
@@ -211,7 +213,7 @@
 			<h3 class="personal-card__name">Philippe Starck</h3>
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
-				<div class="socials__cv">cv</div>
+				<div class="socials__cv"><a href="#" class="socials__cv-link">cv</a></div>
 				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
 				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
 				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
@@ -223,7 +225,7 @@
 			<h3 class="personal-card__name">Mario Bellini</h3>
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
-				<div class="socials__cv">cv</div>
+				<div class="socials__cv"><a href="#" class="socials__cv-link">cv</a></div>
 				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
 				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
 				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
@@ -235,7 +237,7 @@
 			<h3 class="personal-card__name">Patricia Urquiola</h3>
 			<p class="personal-card__position">Designer</p>
 			<div class="personal-card__socials">
-				<div class="socials__cv">cv</div>
+				<div class="socials__cv"><a href="#" class="socials__cv-link">cv</a></div>
 				<a href="#" class="socials-ico facebook" aria-label="Facebook"></a>
 				<a href="#" class="socials-ico twitter" aria-label="Twitter"></a>
 				<a href="#" class="socials-ico linkedin" aria-label="Linkedin"></a>
@@ -263,5 +265,40 @@
 			<a href="#" class="news-block__link">Read more</a>
 		</div>
 	</section>
+	<footer class="footer">
+		<div class="map">
+			<iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5082.503705091202!2d30.56262937054282!3d50.436409364273935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LrQsNC6INC_0L7RgdGC0LDQstC40YLRjCDQutCw0YDRgtGDINC90LAg0YHQsNC50YI!5e0!3m2!1sru!2sua!4v1544802181271" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+		<div class="footer-section">
+			<div class="footer-section__adress">
+					90802 California
+					Long Beatch
+					PO BOX 68789
+					300 EAST OCEAN
+					BOULEVARD
+			</div>
+			<div class="footer-section__contacts">
+					+64 9 345 6758
+					info@dsgn-studio.com
+			</div>
+			<div class="logo footer-section__logo">
+				<img src="img/header-section/logo/DSGN.png" alt="logo" class="logo__image">
+				<h3 class="logo__subtitle">
+					Associates
+					studio
+					design
+				</h3>
+				<div class="icons-wrapper">
+					<a href="#" class="logo__icon logo__icon-facebook" aria-label="Facebook"></a>
+					<a href="#" class="logo__icon logo__icon-twitter" aria-label="Twitter"></a>
+					<a href="#" class="logo__icon logo__icon-linkedin" aria-label="Linkedin"></a>
+					<a href="#" class="logo__icon logo__icon-gplus" aria-label="Google plus"></a>
+				</div>
+			</div>
+			<div class="footer-section__copyright">
+					&copy; 2014  DSGN. All rights reserved - Designed by theuncreativelab.com
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
