--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 	</section>
 	<footer class="footer">
 		<div class="map">
-			<iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5082.503705091202!2d30.56262937054282!3d50.436409364273935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LrQsNC6INC_0L7RgdGC0LDQstC40YLRjCDQutCw0YDRgtGDINC90LAg0YHQsNC50YI!5e0!3m2!1sru!2sua!4v1544802181271" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe title="Google map" class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5082.503705091202!2d30.56262937054282!3d50.436409364273935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LrQsNC6INC_0L7RgdGC0LDQstC40YLRjCDQutCw0YDRgtGDINC90LAg0YHQsNC50YI!5e0!3m2!1sru!2sua!4v1544802181271" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		<div class="footer-section">
 			<div class="footer-section__adress">
